Fixed browser ports and startup scripts. Now auto-opens browser and uses only HTTP API for browser access.

--- a/browser/whisper.html
+++ b/browser/whisper.html
@@ -993,7 +993,7 @@
         // Navigation function to go back to main browser
         function goBackToBrowser() {
             console.log('🔄 Returning to ZHTP Browser...');
-            window.location.href = '/browser/index.html';
+            window.location.href = '/';
         }
         
         // Generate deterministic ZK Identity (same input = same output, no randomness)
@@ -1709,7 +1709,7 @@
 
         function redirectToWelcome() {
             console.log('🔄 Redirecting to wallet setup...');
-            window.location.href = '/browser/welcome.html';
+            window.location.href = '/';
         }
 
         function tryReloadWallet() {
