Improved ZHTP wallet architecture: ZK Identity = Wallet Identity
- Integrated ZK Identity and wallet creation with same cryptographic core
- Updated wallet generation to create pure ZHTP wallets (zhtp_) with linked ZK identities
- Fixed wallet validation to accept both 0x and zhtp_ address formats
- Added ceremony status endpoint for optional network participation check
- Separated wallet creation (cryptographic) from ceremony registration (network rewards)
- Updated frontend to use integrated ZK Identity-wallet system
- Set main browser to mainnet by default to match backend
- Enhanced messaging architecture where ZK Identity cryptographically holds wallet credentials
- Improved onboarding flow with proper wallet object persistence
- All messaging uses real post-quantum cryptography with P2P delivery

--- a/browser/index-merged.html
+++ b/browser/index-merged.html
@@ -601,8 +601,8 @@
             
             <div class="user-info">
                 <select class="network-selector" id="networkSelector" onchange="switchNetwork(this.value)">
-                    <option value="mainnet">🟢 Mainnet</option>
-                    <option value="testnet" selected>🟡 Testnet</option>
+                    <option value="mainnet" selected>🟢 Mainnet</option>
+                    <option value="testnet">🟡 Testnet</option>
                     <option value="local">🔵 Local</option>
                 </select>
                 
