--- a/browser/whisper.html
+++ b/browser/whisper.html
@@ -1206,7 +1206,7 @@
             console.log('🔄 Redirecting to onboarding - no wallet found');
             showToast('Please complete wallet setup first', 'warning');
             setTimeout(() => {
-                window.location.href = './welcome-merged.html';
+                window.location.href = 'http://localhost:8000/browser/welcome-merged.html';
             }, 2000);
         }
 
