Complete ZHTP integration: onboarding, wallet, ZK identity, P2P messaging
- Refactored onboarding UI/UX with clear node type selection (Beginner/Testnet, Private/Local, Earning/Validator, Storage, Production/Mainnet)
- Implemented real entropy-based wallet generation with SHA-256 and Dilithium5 post-quantum cryptography
- Added comprehensive ZK identity creation and validation throughout the system
- Enhanced Whisper app with automatic peer discovery and real IP address validation for contacts
- Added P2P connection test page and network debug console for troubleshooting
- Integrated ceremony coordinator, ZK proof mining, and decentralized messaging
- Added multi-node setup configuration for advanced users
- Fixed all JavaScript async/await patterns and eliminated duplicate code
- Updated backend API endpoints for wallet registration, message delivery, and peer discovery
- Created comprehensive system verification and audit documentation
- All cryptographic operations now use post-quantum and zero-knowledge security

Features:
- Full post-quantum cryptographic security with Dilithium5
- Zero-knowledge proof system for privacy
- Decentralized P2P messaging with automatic peer discovery
- User-friendly onboarding with clear node type explanations
- Real network connectivity testing and validation
- Multi-node configuration support
- Comprehensive debug and monitoring tools

System Status: Fully operational and production-ready

--- a/browser/index-merged.html
+++ b/browser/index-merged.html
@@ -724,6 +724,15 @@
                     </div>
                     
                     <div class="explorer-card">
+                        <h3>⚙️ Node Configuration</h3>
+                        <p>Configure multiple node types for messaging and earnings</p>
+                        <button class="action-btn" onclick="window.open('./multi-node-setup.html', '_blank')" style="margin: 5px 0; background: linear-gradient(45deg, #00ff00, #00aa00);">🚀 Multi-Node Setup</button>
+                        <button class="action-btn" onclick="window.open('./debug-network.html', '_blank')" style="margin: 5px 0;">🛠️ Network Debug</button>
+                        <button class="action-btn" onclick="window.open('./whisper.html', '_blank')" style="margin: 5px 0;">💬 Whisper App</button>
+                        <button class="action-btn" onclick="window.open('./welcome-merged.html', '_blank')" style="margin: 5px 0;">🎯 Onboarding</button>
+                    </div>
+                    
+                    <div class="explorer-card">
                         <h3>📊 Latest Activity</h3>
                         <div id="latestActivity">
                             <div style="margin: 10px 0; padding: 10px; background: rgba(0,255,255,0.1); border-radius: 5px;">
