--- a/browser/index-merged.html
+++ b/browser/index-merged.html
@@ -128,6 +128,7 @@
         .user-avatar:hover {
             transform: scale(1.1);
             box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+            user-select: none;
         }
 
         /* Navigation Bar */
@@ -525,6 +526,8 @@
             .browser-header {
                 flex-direction: column;
                 gap: 15px;
+                position: relative;
+                z-index: 9999;
             }
             
             .nav-bar {
@@ -559,6 +562,7 @@
             min-width: 200px;
             z-index: 9999;
             display: none;
+            user-select: none;
         }
 
         .user-dropdown.active {
